--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "firebase-admin": "^11.0.0",
     "helmet": "^5.1.0",
     "mongoose": "^6.4.4",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0"
   }
