--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "author": "",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^6.2.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase": "^9.9.1",
     "firebase-admin": "^11.0.0",
+    "gzip": "^0.1.0",
     "helmet": "^5.1.0",
     "mongoose": "^6.4.4",
     "multer": "^1.4.4",
