--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
-    "prisma": "^4.0.0"
+    "prisma": "^4.0.0",
+    "tinify": "^1.6.1"
   },
   "devDependencies": {
     "compress-images": "^2.0.5"
