--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
+    "redis": "^4.2.0",
     "tinify": "^1.6.1"
   },
   "devDependencies": {
